# ssrm

./: .pre-commit-config.yaml  Makefile  pyproject.toml
benchmarks/benchmarks/: bench_ssrm.py
ssrm_test/: constants.py  ssrm_test.py  test_jupyter_notebooks.py
