[project]
name = "ssrm-test"
version = "0.1.6"
description = "A library for Sequential Sample Ratio Mismatch (SRM) test."
authors = [
    {name = "Michael Lindon",email = "michael.lindon@optimizely.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (~=2.2.6)",
    "scipy (~=1.15.3)",
    "toolz (~=1.0.0)"
]

[dependency-groups]
test = [
    "asv (~=0.6.5)",
    "autoflake (~=2.3.1)",
    "black (~=25.1.0)",
    "black-nbconvert (~=0.4.0)",
    "flake8 (~=7.3.0)",
    "isort (~=6.0.1)",
    "jupyterlab (~=4.4.7)",
    "pre-commit (~=4.3.0)",
    "pytest (~=8.4.2)",
    "pytest-cov (~=7.0.0)",
    "Sphinx (~=8.1.3)",
    "sphinx_rtd_theme (~=3.0.2)",
    "m2r (~=0.3.1)",
    "papermill (~=2.6.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
